--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handwerk — Emissions Calculator (for your handpoked tattoo session)</title>
+    <title>Handwerk — Impact Calculator (for your handpoked tattoo session)</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/Draggable.min.js"></script>  
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="h1-wrap">
-            <h1 class="title">EMISSIONS CALCULATOR</h1>
+            <h1 class="title">IMPACT CALCULATOR</h1>
             <h1 class="byline">(for your handpoked tattoo session)</h1>
         </div>
 
@@ -111,7 +111,7 @@
                     <p>The site was developed in the context of Marcel Müller’s BA graduation project, which aims to visualise the environmental impact of tattoo products processes. The project was initiated with the goal of reducing the impact of tattoo sessions, in particular the amount of plastic waste. Since research and calculations brought to light the high-impact nature of single-use applications and products, the intention was to see if visualising LCA data in a more friendly and accessible manner could foster a better understanding of the environmental impacts regarding tattoo products and sessions, especially amongst tattooing communities in the Cologne-Bonn region of Germany.</p>
                     <p>One of the more problematic scenarios highlighted in the thesis, is the end-of-life process of incineration that is the most common solution in Germany. This creates toxic byproducts as well as air pollution that should not be underestimated. There is a need for political, consumer and manufacturing behaviours to adopt more sustainable systems in the future. Since there are currently very few solutions at hand regarding the end-of-life, reducing waste is the most viable way of impact reduction.</p>
                     <p>Marcel’s thesis thus indicates potential areas for improvement, and also verbalises the data gaps* transparently. Moreover, the thesis also includes schematics/blueprints for the manufacturing of the hand-poke tool - Ekatā S, which was designed and prototyped by Marcel as part of his ongoing research. The Ekatā S eliminates the need for single-use cartridge needle grips, and thus acts as a sustainable proposition over extended periods of time. This solution reduces impact with the benefit of personalisation to the artist's liking, especially when locally produced.</p>
-                    <p><a href="src/Marcel Müller_BA_Thesis_ 26.6.22.pdf" target="_blank">Download</a> a copy of Marcel’s BA thesis for further information about the project. For questions regarding the thesis, feel free to contact Handwerk Studio via <a>email</a> or on <a>Instagram</a>.</p>
+                    <p><a href="src/MarcelMüller_BA_Thesis_26.6.22.pdf" target="_blank">Download</a> a copy of Marcel’s BA thesis for further information about the project. For questions regarding the thesis, feel free to contact Handwerk Studio via <a>email</a> or on <a>Instagram</a>.</p>
                     <p>*Not all data gaps or concerns could be solved within the limited time-frame of the bachelor project, primarily due to the lack of access to product specific data, as well as other limitations in the LCA software, Sustainable Minds 2013. Data on this site will constantly be updated, whenever new data becomes available and new research is conducted. </p>
                 </article>     
 
