--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/Draggable.min.js"></script>  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GS9Q8T7SPZ"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-GS9Q8T7SPZ');
-    </script>
 
 
 </head>
@@ -44,7 +35,7 @@
                     <p>?</p>
                 </button>
 
-                <div id="instructions">
+                <section id="instructions">
                     <button class="buttons" id="close-instructions" onclick="hideInstructions()">
                         <p class="bi bi-x"></p>
                     </button>
@@ -59,7 +50,7 @@
                         <p class="s">*This website saves none of your data; all data is stored locally on your system!</p>
                     </div>
 
-                </div>
+                </section>
             
                 <button class="buttons" id="refresh" onclick="resetCards()">
                     <p class="bi bi-grid-3x2"></p>
